force-app/main/default/objects/Expense_Report__e/Expense_Report__e.object-meta.xml
<CustomObject>
    <label>Expense Report</label>
    <pluralLabel>Expense Reports</pluralLabel>
</CustomObject>