force-app/main/default/objects/Expense_Report__e/fields/Last_Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Expense_Date__c</fullName>
    <label>Last Expense Date</label>
    <type>Date</type>
</CustomField>