force-app/main/default/objects/Expense_Report__e/fields/Owner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company_Name__c</fullName>
    <label>Owner Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>